--- a/css/crearAnuncio.css
+++ b/css/crearAnuncio.css
@@ -1,50 +1,68 @@
-html{
+html {
     font-size: 1.4rem;
- }
+}
+
 .register-anuncio-title {
     font-size: 32px;
     text-align: center;
     padding: 2%;
 }
 
-.register-anuncio-form-container, .register-family-form-container {
+.register-anuncio-form-container,
+.register-family-form-container {
     display: flex;
-    flex-direction:  column;
+    flex-direction: column;
     max-width: 70%;
     margin: 0 auto;
     gap: 10px;
     padding-bottom: 10%;
 }
+
 .register-family-form-container {
     display: none;
 }
+
 .register-anuncio-form-container label {
     font-weight: 800;
 }
+
 .register-anuncio-form-container input {
     min-height: 20px;
     border-radius: 2px;
 }
-select{
+#crear-anuncio-container {
+    background-color: #f7ecde;
+}
+#new-anuncio-submit{
+    background-color: #F6F1EE;
+}
+input{
+    background-color: #F6F1EE;
+}
+textarea{
+    background-color: #F6F1EE;
+}
+select {
     padding: .5rem 0;
+    background-color: #F6F1EE;
 }
 
-#display-image{
+#display-image {
     display: none;
     width: 400px;
     height: 225px;
     background-position: left;
     background-size: contain;
     background-repeat: no-repeat;
-  }
-  
+}
+
 .submit-button-anuncio {
     background-color: transparent;
     border: 2px solid black;
     min-height: 40px;
     cursor: pointer;
 
-  }
+}
 
 .submit-button-anuncio:hover {
     transition: all .2s ease-out;
@@ -52,18 +70,20 @@ select{
 }
 
 #add-new-family {
-    color:rgba(216, 123, 1, 0.712);
+    color: rgba(216, 123, 1, 0.712);
     text-decoration: none;
 
 }
+
 #add-new-family:hover {
-    color:rgba(184, 159, 128, 0.712);
+    color: rgba(184, 159, 128, 0.712);
 }
 
 .back-arrow {
     max-width: 30px;
     cursor: pointer;
 }
+
 .back-arrow:hover {
     transform: scale(1.1);
     transition: all .2s ease-in;
