--- a/css/header.css
+++ b/css/header.css
@@ -7,6 +7,7 @@
     justify-content: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin: .5rem 0;
+    background-color: #9ED2C6;
   }
   
   
