--- a/css/landing.css
+++ b/css/landing.css
@@ -1,60 +1,65 @@
-html{
+html {
   font-size: 1.4rem;
 }
 .landing-container {
-    min-width: 100%;
-    min-height:100vh;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    
-  }
-  .landing-img {
-    min-width: 400px;
-    /* width: 450px; */
-    /**position: relative;
+  min-width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  background-color: #f7ecde;
+}
+.landing-img {
+  min-width: 400px;
+  /* width: 450px; */
+  /**position: relative;
     transform: translateX(-50%);
     left: 50%;**/
-    background-attachment: fixed;
-    margin: 5%;
-  }
+  background-attachment: fixed;
+  margin: 5%;
+}
+.util-container-landing {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5%;
+}
+.landing-message-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 55px;
+  text-align: center;
+}
+@media (max-width: 1210px) {
   .util-container-landing {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 5%;
-  }
-  .landing-message-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    font-size: 55px;
-    text-align: center;
-  }
-  @media (max-width: 1210px) {
-    .util-container-landing {
-      margin-bottom: 10%;
-    }
-    .landing-button {
-      margin-top: 5%;
-    }
-  }
-  .landing-message {
-    font-size:55px;
-    justify-self:center;
+    margin-bottom: 10%;
   }
   .landing-button {
-    background-color: transparent;
-    border: 2px solid black;
-    min-height: 10%;
-    min-width: 30%;
-    cursor: pointer;
-    font-size: 20px;
-    border-radius: 10%;
+    margin-top: 5%;
   }
-  
-  .landing-button:hover {
-    transition: all 1s ease-out;
-    background-color: rgba(255, 143, 0, 0.37);
-  }
+}
+.landing-message {
+  font-size: 55px;
+  justify-self: center;
+}
+.landing-button {
+  background-color: transparent;
+  border: 2px solid black;
+  min-height: 10%;
+  min-width: 30%;
+  cursor: pointer;
+  font-size: 20px;
+  /* border-radius: 10%; */
+}
+
+.landing-button:hover {
+  transition: all 1s ease-out;
+  background-color: rgba(255, 143, 0, 0.37);
+}
+
+#button-landing {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  padding: 4px;
+}
