--- a/css/pronostico.css
+++ b/css/pronostico.css
@@ -8,19 +8,12 @@
 }
 
 .left-block {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    max-width: 80%;
-    min-width: 60%;
     margin: 0 auto;
-    -webkit-box-shadow: 0px 0px 17px -3px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 0px 17px -3px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 17px -3px rgba(0, 0, 0, 0.75);
     border-radius: 10px;
+    width: 100%;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 280px) {
     .left-block {
 
         flex-direction: column;
