--- a/css/cotizacion.css
+++ b/css/cotizacion.css
@@ -40,3 +40,26 @@
         height: 20%;
     }
 }
+
+.forecast-main-container {
+  padding: 5%;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  background-color: #f7ecde;
+}
+
+.left-block {
+  margin: 0 auto;
+  border-radius: 10px;
+  width: 100%;
+}
+
+@media (max-width: 280px) {
+  .left-block {
+
+      flex-direction: column;
+
+  }
+}
